2A/05_Projet_GL/src/test/deca/context/valid/complet/27_init_filed_sous_type.deca
// Description :
// Test valide contextulle
// Resultats :
//    Arbre avec décoration 
// Historique : 
//  cree le 18/01/2024

class A {

}

class B extends A  {
    A a = new B();
}