2A/05_Projet_GL/src/test/deca/context/invalid/complet/07_decl_method_en_decl_field.deca
// Description :
//     une rédefinition du methode en tant que champ 
// Resultats :
//    une rédefinition inacceptable du get en tant que champ 
// Historique :
//  cree le 16/01/2024

class A {
    int get()
    {

    }
}

class B extends A  {
    int get ;
}